Fix project page layout and heading wrapping

--- a/style.css
+++ b/style.css
@@ -737,4 +737,5 @@ html {
 
 .flex-project h3 {
     margin-top: 1rem;
+    text-wrap: balance;
 }
